test1-cicd-output.txt
Initialize output
[2022-03-18 21:20:16.717] INFO: Execute build command
gcc -g  -Wall -std=c99 -c float.c
float.c:81:1: error: expected identifier or ‘(’ before ‘/’ token
 /
 ^
Makefile:20: recipe for target 'float.o' failed
make: *** [float.o] Error 1
[2022-03-18 21:20:16.865] ERROR: BUILD ERROR
